# MazeGame

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  build.sh  notes.md
files/: default.vert
src/: CMakeLists.txt  launch.cpp  main.cpp
src/game/: CMakeLists.txt  difficulty.cpp  difficulty.hpp  game.cpp  game.hpp  maze.cpp  maze.hpp  settings.cpp  settings.hpp
src/generators/: CMakeLists.txt  breadth_first_search_solver.cpp  breadth_first_search_solver.hpp  generator.hpp  generator_factory.cpp  generator_factory.hpp  kruskals_generator.cpp  kruskals_generator.hpp  layout.cpp  layout.hpp  recursive_backtracking_generator.cpp  recursive_backtracking_generator.hpp  solver.cpp  solver_factory.cpp  solver_factory.hpp  utility.cpp  utility.hpp
src/graphics/: CMakeLists.txt  hellocmake.cpp  hellocmake.h  main.cpp  main_hello.cpp  test_main.cpp
src/graphics/shaders/: shader.cpp  shader.hpp
src/graphics/shapes/: complex_cube.cpp  complex_cube.hpp  cube_pawn.cpp  cube_pawn.hpp  digit_figure.cpp  digit_figure.hpp  dynamic_solid_figure.cpp  dynamic_solid_figure.hpp  dynamic_state_figure.cpp  dynamic_state_figure.hpp  game_window.cpp  game_window.hpp  maze_figure.cpp  maze_figure.hpp  path_figure.cpp  path_figure.hpp  pawn_figure.cpp  pawn_figure.hpp  solid_figure.cpp  solid_figure.hpp
src/graphics/shapes/data_buffers/: EBO.cpp  EBO.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp
src/maze/: CMakeLists.txt  a_star_solver.cpp  a_star_solver.hpp  aldous_broder_generator.cpp  aldous_broder_generator.hpp  breadth_first_search_solver.cpp  breadth_first_search_solver.hpp  djikstra_solver.cpp  djikstra_solver.hpp  ellers_generator.cpp  ellers_generator.hpp  generator.hpp  generator_factory.cpp  generator_factory.hpp  generator_test_run.cpp  generator_test_run.hpp  growing_tree_generator.cpp  growing_tree_generator.hpp  kruskals_generator.cpp  kruskals_generator.hpp  launch.cpp  layout.cpp  layout.hpp  paths.cpp  paths.hpp  predecessors.cpp  predecessors.hpp  prims_generator.cpp  prims_generator.hpp  recursive_backtracking_generator.cpp  recursive_backtracking_generator.hpp  solver.cpp  solver.hpp  solver_factory.cpp  solver_factory.hpp  unvisited.cpp  unvisited.hpp  utility.cpp  utility.hpp  wilsons_generator.cpp  (+1 more)
src/maze/generators/: aldous_broder_generator.cpp  aldous_broder_generator.hpp  ellers_generator.cpp  ellers_generator.hpp  generator.hpp  generator_factory.cpp  generator_factory.hpp  growing_tree_generator.cpp  growing_tree_generator.hpp  hunt_and_kill_generator.cpp  hunt_and_kill_generator.hpp  kruskals_generator.cpp  kruskals_generator.hpp  prims_generator.cpp  prims_generator.hpp  recursive_backtracking_generator.cpp  recursive_backtracking_generator.hpp  recursive_division_generator.cpp  recursive_division_generator.hpp  sidewinder_generator.cpp  sidewinder_generator.hpp  wilsons_generator.cpp  wilsons_generator.hpp
src/maze/solvers/: a_star_solver.cpp  a_star_solver.hpp  breadth_first_search_solver.cpp  breadth_first_search_solver.hpp  djikstra_solver.cpp  djikstra_solver.hpp  predecessors.cpp  predecessors.hpp  solver.cpp  solver.hpp  solver_factory.cpp  solver_factory.hpp
src/maze/test_run/: launch.cpp  test_run.cpp  test_run.hpp
src/tests/: CMakeLists.txt  example_test.cpp
src/tests/game/: difficulty.cpp  game.cpp  maze.cpp  settings.cpp
src/tests/maze/: generators.cpp  layout.cpp  paths.cpp  solvers.cpp  utility.cpp
