add_library(maze
  generators/aldous_broder_generator.cpp
  generators/ellers_generator.cpp
  generators/generator_factory.cpp
  generators/growing_tree_generator.cpp
  generators/hunt_and_kill_generator.cpp
  generators/kruskals_generator.cpp
  generators/prims_generator.cpp
  generators/recursive_backtracking_generator.cpp
  generators/recursive_division_generator.cpp
  generators/sidewinder_generator.cpp
  generators/wilsons_generator.cpp
  layout.cpp
  paths.cpp
  solvers/a_star_solver.cpp
  solvers/breadth_first_search_solver.cpp
  solvers/djikstra_solver.cpp
  solvers/predecessors.cpp
  solvers/solver_factory.cpp
  solvers/solver.cpp
  unvisited.cpp
  utility.cpp
)

add_executable(maze_test_run
  test_run/test_run.cpp
  test_run/launch.cpp
)

target_link_libraries(maze_test_run
  maze
)
